# Allumette

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
data/: classroom.csv  course.csv  demo.csv  demo2.csv  department.csv  instructor.csv  join.csv  result.csv  result4.csv  store.csv  student.csv
src/: main.cpp  value.cpp
src/include/data/: csv.h  dataset.h  table.h  value.h
src/include/operator/: abstract_operator.h  csv_table_load_op.h  csv_table_store_op.h  gather_op.h  join_op.h  table_partiton_op.h
src/include/planner/: pisi_planner.h  sipi_planner.h
src/include/scheduler/: adaptivescheduler.h  scheduler.h  semaphore.h  worker.h
src/include/synchronization/: synchronizer.hpp
src/operator/: csv_table_load_op.cpp  csv_table_store_op.cpp  gather_op.cpp  join_op.cpp  table_partition_op.cpp
src/planner/: pisi_planner.cpp  sipi_planner.cpp
src/scheduler/: adaptivescheduler.cpp  scheduler.cpp
src/thrift/: Calculator_server.skeleton.cpp  SharedService_server.skeleton.cpp
test/: CMakeCache.txt  CMakeLists.txt  basic_test.cpp  cmake_install.cmake  csv_loader_test.cpp  join_test.cpp  planner_test.cpp  scheduler_test.cpp  sipi_planner_test.cpp  sipi_scheduler_test.cpp  synchronization_test.cpp  table_partition_test.cpp
thrift/: shared.thrift
